# hadron

./: .editorconfig  Cargo.toml  GEMINI.md  README.md  build.rs
src/: app.rs  main.rs  models.rs  resources.rs  utils.rs
src/pages/: add_game.rs  home.rs  mod.rs  settings.rs
src/widgets/: buttons.rs  layouts.rs  mod.rs
ui/: add-game.slint  app.slint  components.slint  home.slint  settings.slint
