[package]
name = "quarkpad"
version = "1.0.0"
edition = "2024"
description = "A simple game launcher for Linux to manage and launch games using Proton."
authors = ["Asadul Al Galib <asadulgalibvat69@gmail.com>"]
license = "Unlicense"
repository = "https://github.com/galib45/quarkpad"

[dependencies]
dirs = "6.0.0"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.14.1"
toml = "0.9.10"

[build-dependencies]
slint-build = "1.14.1"
